# artifact_analysis

./: .gitignore  .instructions.md  CITATION_VERIFICATION.md  CONTRIBUTING.md  README.md  acm_scrape.py  add_top_repos.py  alternative_committee_scrape.py  artifact_citing_dois.txt  check_zenodo_github_links.py  citation_verification.json  citation_verification_false_positives.txt  citation_verification_genuine.txt  collect_artifact_stats.py  download_dblp.sh  enrich_affiliations.py  enrich_affiliations_csrankings.py  enrich_affiliations_dblp.py  fix_salvatore_duplicate.py  generate_area_authors.py  generate_artifact_citations.py  generate_artifact_sources_table.py  generate_artifact_sources_timeline.py  generate_author_profiles.py  generate_author_stats.py  generate_cited_artifacts_list.py  generate_combined_rankings.py  generate_committee_stats.py  generate_geographic_statistics.py  generate_institution_rankings.py  generate_repo_stats.py  generate_statistics.py  generate_sysartifacts_results.py  mkdocs.yml  parse_dlbp.py  pyproject.toml  requirements-ci.txt  requirements-docs.txt  requirements.txt  run_pipeline.sh  (+6 more)
.github/: copilot-instructions.md
data/: affiliation_rules.yaml  known_dead_hosts.yaml  manual_committees.yaml  name_aliases.yaml  university_country_overrides.yaml
docs/: gen_cli_pages.py  gen_ref_pages.py  index.md
scripts/: download_dblp.py  download_dblp.sh
src/: cache.py  config.py  invariants.py  orchestrator.py  run_metadata.py  save_results.py  snapshot.py  stages.py
tests/: conftest.py  test_author_index.py  test_cache.py  test_cache_module.py  test_conference.py  test_config.py  test_dblp_entities.py  test_download_dblp.py  test_enricher_index.py  test_generate_author_index.py  test_generate_statistics.py  test_generator_author_id.py  test_http.py  test_integration.py  test_invariants.py  test_io.py  test_logging_config.py  test_orchestrator.py  test_paper_citations_doi.py  test_paper_index.py  test_repo_utils.py  test_scoring_invariants.py  test_scrape_committee_web.py  (+4 more)
(+128 files in other folders)
